# code

./: .gitignore  .raccoon.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  ci.yml.disabled  issue-triage.yml  labels.yml  pr-labeler.yml.disabled  release.yml  stale.yml
.tmp/feature-wiring-audit-2026-02-25/: README-audit.md
.tmp/feature-wiring-audit-2026-02-25/00-baseline/: baseline-summary.md  crate-file-counts.csv  git-head-start.txt  git-status-start.txt  runtime-files.csv  slash-commands.csv
.tmp/feature-wiring-audit-2026-02-25/01-feature-catalog/: cli-command-features.csv  feature-catalog.md  slash-command-features.csv  tool-registry-features.csv
.tmp/feature-wiring-audit-2026-02-25/02-wiring-traces/: file-audit-status.csv  wiring-matrix.csv  wiring-summary.md
.tmp/feature-wiring-audit-2026-02-25/03-behavior-checks/: behavior-focus-issues.md  behavior-summary.md  behavior-verdicts.csv  external-references.md
.tmp/feature-wiring-audit-2026-02-25/04-findings/: fault-triage.csv  master-findings.md
.tmp/feature-wiring-audit-2026-02-25/05-fix-batches/: fix-batch-plan.md  fix-ledger.md
.tmp/feature-wiring-audit-2026-02-25/06-verification/: cargo-check-workspace.txt  cargo-clippy.txt  cargo-fmt-check.txt  cargo-test-all.txt  verification-summary.md
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  error.rs  lib.rs  plugin_hook.rs  token_store.rs
crates/auth/src/oauth/: anthropic.rs  antigravity.rs  chatgpt.rs  copilot.rs  cursor.rs  google.rs  mod.rs  openai.rs  refresh.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent_files.rs  agent_manager.rs  agent_roles.rs  analytics.rs  autopilot.rs  checkpoint.rs  cloud.rs  commands.rs  context_briefing.rs  context_files.rs  deep_mode.rs  deepinit.rs  diagnostics.rs  formatter.rs  git_undo.rs  hooks.rs  index.rs  integrations.rs  judging.rs  keywords.rs  lib.rs  librarian.rs  lsp.rs  memory.rs  notepad.rs  notify.rs  persistence.rs  planning.rs  replay.rs  routing.rs  sandbox.rs  sharing.rs  signals.rs  skills.rs  team.rs  updater.rs  verify.rs  voice.rs  walkthrough.rs  worktree.rs
crates/core/src/agent/: mod.rs
crates/core/src/context/: mod.rs
crates/core/src/conversation/: mod.rs
crates/core/src/mcp/: mod.rs  tool_adapter.rs
crates/core/src/plugins/: loader.rs  manager.rs  manifest.rs  mod.rs
crates/core/src/prompt/: mod.rs
crates/core/src/session/: mod.rs
crates/core/src/streaming/: mod.rs
crates/core/src/teams/: config.rs  mailbox.rs  mod.rs  tasks.rs
crates/core/src/tools/: apply_patch.rs  ask_user.rs  bash.rs  batch.rs  browser.rs  change_tracker.rs  close_agent.rs  diff.rs  edit.rs  filesystem.rs  fuzzy_find.rs  git.rs  glob.rs  grep.rs  instrument.rs  load_skill.rs  lsp.rs  memory.rs  mod.rs  notepad.rs  permission.rs  pr.rs  read.rs  resume_agent.rs  semantic_search.rs  send_input.rs  spawn_agent.rs  tail_file.rs  task.rs  team.rs  think.rs  todo.rs  tool_search.rs  update_plan.rs  verify.rs  wait_tool.rs  web.rs  write.rs
crates/core/src/workspace/: mod.rs
crates/index/: Cargo.toml
crates/index/src/: chunker.rs  embedder.rs  lib.rs  search.rs  store.rs  watcher.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  claude_sdk.rs  codex.rs  copilot.rs  cursor.rs  error.rs  gemini.rs  lib.rs  list_models.rs  model_cache.rs  openai.rs  sse.rs  types.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  completion.rs  export.rs  highlight.rs  history.rs  input.rs  lib.rs  logo.rs  logo_anim.rs  spinner.rs  theme.rs  ui.rs
crates/tui/src/aesthetic/: borders.rs  identity.rs  layout.rs  mod.rs  primitives.rs  tokens.rs  typography.rs
crates/tui/src/components/: chat.rs  footer.rs  header.rs  input_box.rs  mod.rs  plan_banner.rs  plan_panel.rs  selector.rs  settings_panel.rs  text_prompt.rs  todo_panel.rs  update_banner.rs  welcome.rs
docs/: README.md  architecture.md  authentication.md  autopilot.md  building.md  commands.md  configuration.md  hooks.md  mcp.md  memory.md  notifications.md  providers.md  releasing.md  routing.md  self-update.md  sessions.md  skills.md  teams.md  tools.md  tui.md  verification.md
docs/_meta/: source-map.md
docs/internals/: roles-and-briefing.md  subagent-lifecycle.md  workspace-rules.md
docs/reference/: cli.md  slash-commands.md
infra/releases-worker/: install.sh  package-lock.json  package.json  wrangler.toml
infra/releases-worker/releases/: latest.json
infra/releases-worker/src/: index.ts
npm/nyz/: package.json
npm/nyz-darwin-arm64/: package.json
npm/nyz-darwin-x64/: package.json
npm/nyz-linux-arm64/: package.json
npm/nyz-linux-x64/: package.json
scripts/: braille_logo.py
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
