[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/provider",
    "crates/auth",
    "crates/tui",
    "crates/config",
]

[workspace.package]
version = "1.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/nyzhi-com/code"
homepage = "https://nyzhi.com"
rust-version = "1.75"
keywords = ["ai", "cli", "coding", "llm", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + streaming
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# OAuth2
oauth2 = "5"

# Credential storage
keyring = "3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
syntect-tui = "3"

# Async trait
async-trait = "0.1"

# Tokio utilities
tokio-util = "0.7"

# Pin projection
pin-project-lite = "0.2"

# UUID
uuid = { version = "1", features = ["v4"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "6"

# Open browser
open = "5"

# File globbing
glob = "0.3"

# Regex
regex = "1"

# Random
rand = "0.9"

# Desktop notifications
notify-rust = "4"

# Self-update
self-replace = "1"
semver = "1"

# Base64 encoding
base64 = "0.22"

# MCP (Model Context Protocol) client
rmcp = { version = "0.16", features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

# Workspace crates
nyzhi-core = { path = "crates/core", version = "=1.1.1" }
nyzhi-provider = { path = "crates/provider", version = "=1.1.1" }
nyzhi-auth = { path = "crates/auth", version = "=1.1.1" }
nyzhi-tui = { path = "crates/tui", version = "=1.1.1" }
nyzhi-config = { path = "crates/config", version = "=1.1.1" }
