[package]
name = "nyzhi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A performance-optimized AI coding CLI"
default-run = "nyzhi"

[[bin]]
name = "nyzhi"
path = "src/main.rs"

[dependencies]
nyzhi-core.workspace = true
nyzhi-provider.workspace = true
nyzhi-auth.workspace = true
nyzhi-tui.workspace = true
nyzhi-config.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
futures.workspace = true
