[package]
name = "nyzhi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core agent loop and tool system for nyzhi"

[dependencies]
nyzhi-provider.workspace = true
nyzhi-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
glob.workspace = true
regex.workspace = true
dirs.workspace = true
rmcp.workspace = true
reqwest.workspace = true
rand.workspace = true
urlencoding = "2.1.3"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
self-replace.workspace = true
semver.workspace = true
flate2 = "1"
tar = "0.4"
tempfile = "3"
keyring.workspace = true
