[package]
name = "nyzhi-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LLM provider abstraction for nyzhi (OpenAI, Anthropic, Gemini)"

[dependencies]
nyzhi-auth.workspace = true
nyzhi-config.workspace = true
tokio.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
pin-project-lite.workspace = true
uuid.workspace = true
base64.workspace = true
sha2.workspace = true
